[package]
name = "cprf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
bitvec = "1.0.1"
generic-array = { version = "0.14.6", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.157", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "ggm"
harness = false
