[workspace]
members = [".", "./pycprf"]

[package]
name = "cprf"
version = "0.1.1"
edition = "2021"
authors = ["plzfgme <plzfgme@gmail.com>"]
description = "Constrained pseudo random function (PRF) in Rust"
keywords = ["cryptography", "prf", "constrained", "constrained_prf"]
categories = ["cryptography"]
readme = "README.md"
repository = "https://github.com/plzfgme/cprf"
license = "MIT"

[dependencies]
aes = "0.8.2"
arrayvec = "0.7.2"
bitvec = "1.0.1"
generic-array = { version = "0.14.6", features = ["serde"] }
serde = { version = "1.0.157", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.11.1", features = ["criterion", "flamegraph"] }
rand = "0.8.5"

[[bench]]
name = "ggm"
harness = false
